styles.css
@font-face {
  font-family: lust-display;
  src: url("fonts/lust-display-regular.otf") format("opentype");
}

:root {
  --base-transition-duration: 0.3s;
  --hue: 182;

  font-family: 'Roboto', sans-serif;
  font-weight: 500;

  --tertiary-hue: calc(var(--hue) + 300);
  --accent-hue: calc(var(--hue) + 60);
  --primary-color: hsl(var(--hue), 100%, 100%);
  --pre-primary-color: hsl(var(--hue), 50%, 55%);
  --secondary-color: hsl(var(--hue), 50%, 90%);
  --tertiary-color: hsl(var(--tertiary-hue), 80%, 80%);
  --accent-color: hsl(var(--accent-hue), 80%, 20%);
  
  @media (prefers-color-scheme: dark) {
    --primary-color: hsl(var(--hue), 100%, 100%);
    --pre-primary-color: hsl(var(--hue), 50%, 55%);
    --secondary-color: hsl(var(--hue), 50%, 90%);
    --tertiary-color: hsl(var(--tertiary-hue), 80%, 80%);
    --accent-color: hsl(var(--accent-hue), 80%, 20%);
  }
}

html {
  height: 100%;
  overflow: hidden;
  caret-color: transparent;
  overscroll-behavior: none;
  touch-action: none;
}

body {
  height: 100%;
  overflow: hidden;
  display: flex;
  align-items: flex-end;
  justify-content: center;
  line-height: 1.6;
  margin: 0;
  padding: 0;
}

/* Scrollbar */
::-webkit-scrollbar {
	width: 6px;
}

::-webkit-scrollbar-track {
	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0,0.3);
}

::-webkit-scrollbar-thumb {
	background: rgba(255,255,255,1);
}

a:not(.fa) {
  color: var(--pre-primary-color);

  h3 & {
    color: var(--primary-color);
  }

  &:hover {
    color: var(--pre-primary-color);
  }
}

h3 {
  border: 1px solid var(--primary-color);
  border-radius: 2px;
  width: fit-content;
  padding: 6px 12px;

  a {
    text-decoration: none;
  }

  .fa {
    margin-left: 8px;
    font-size: 18px;
  }
}

.container {
  display: flex;
  flex: 1 1 0;
  flex-direction: row;

  /** This gets overriden once the videos have loaded. */
  opacity: 0;

  transition: all 0.5s ease;
  overflow: hidden;
  height: 100%;
  width: 100%;

  width: 100%;
  background-size: cover;
  background-position: bottom center;

  background-image: url('images/light-background.jpg');
  @media (prefers-color-scheme: dark) {
    background-image: url('images/dark-background.jpg');
  }
}

.hidden-on-mobile {
  @media screen and (max-width: 767px) {
    display: none !important;
  }
}

.left-options {
  position: relative;

  display: flex;
  flex-direction: column;
  align-items: end;
  justify-content: center;
  overflow-y: clip;
  z-index: 2;

  perspective: 180px;
  margin-left: 20vw;

  .option {
    height: 10vh;
    width: max-content;

    pointer-events: auto;
    outline: none;

    text-transform: uppercase;
    color: var(--primary-color);
    font-family: 'Space Mono', monospace;
    font-weight: 500;
    font-size: clamp(3rem, 10vh, 10rem);
    line-height: clamp(3rem, 10vh, 10rem);

    /** Controls the xy position of the option */
    transition: transform var(--base-transition-duration) ease-in;

    &:focus .focus-only-background {
      /** Hack to allow the background to overflow the mask */
      pointer-events: none;

      padding: 20vw;
      margin: -20vw;

      background-image: url(images/masks0.png);
      background-color: transparent;
      background-repeat: no-repeat;
      background-size: 40vw 30vh;
      background-position-x: center;
      background-position-y: calc(50% + 6vh);
      filter: brightness(0);
    }
  
    > span {
      /** This not a no-op, as its needed for stacking context. */
      text-shadow: 4px 4px 1px black;
      filter: brightness(1);
  
      > span {
        display: inline-block;
        filter: brightness(1);
    
      }
    }
  }

  .option:nth-of-type(1) {
    margin-top: 10vh;
    transform: rotate3d(0, -1, 0, -5deg);
    margin-top: 10vh;
    rotate: z 23deg;
  }
  .option:nth-of-type(2) {
    transform: rotate3d(0, -1, 0, -5deg);
    margin-top: 3vh;
    rotate: z 16deg;
  }
  .option:nth-of-type(3) {
    transform: rotate3d(0, -1, 0, -5deg);
    margin-top: 3vh;
    margin-right: 10vw;
    rotate: z 12deg;
  }
  .option:nth-of-type(4) {
    transform: rotate3d(0, -1, 0, -5deg);
    margin-top: 3vh;
    margin-right: 12vw;
    rotate: z 4deg;
  }
  .option:nth-of-type(5) {
    transform: rotate3d(0, -1, 0, -5deg);
    margin-top: 3vh;
    margin-right: 14vw;
    rotate: z -2deg;
  }
  .option:nth-of-type(6) {
    transform: rotate3d(0, -1, 0, -5deg);
    margin-top: 2vh;
    margin-right: 9vw;
    rotate: z -6deg;
  }
  
  @media screen and (max-width: 767px) {
    margin-top: 32px;
    margin-left: 10vw;
    align-items: flex-start;
    justify-content: flex-start;

    .option.option {
      height: 2em;
      font-size: 2em;
      line-height: 2em;
      rotate: z 0deg;
      margin-top: 0;
      margin-right: 0;
      transform: none;

      .focus-only-background.focus-only-background {
        pointer-events: none;
        padding: 15vh;
        margin: -15vh;
        background-size: 80vw 15vh;
        background-position-y: 12vh;
      }
    }
  }
}
/* ... */

